@@ -3304,6 +3304,10 @@ SOURCE=..\types.h
 # End Source File
 # Begin Source File
 
+SOURCE=..\endian.h
+# End Source File
+# Begin Source File
+
 SOURCE=..\starcon2.c
 # End Source File
 # End Group
